feat(companies API): add crud companies
