# apps/api/config/routes.rb
@@ -13,6 +13,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
+      resources :companies
       resources :departments
       resources :users do
         member do
